--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -1,25 +1,15 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import "tailwindcss";
 
 body {
+  background-color: #222831;
+  color: #eeeeee;
   margin: 0;
-  width: 100vw;
-  height: 100vh;
-}
+  padding: 0;
+  box-sizing: border-box;
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  display: flex;
+  flex-direction: column;
 }
