--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -1,12 +1,27 @@
 @import "tailwindcss";
+@import "tailwind-scrollbar-hide/v4";
+
+@layer base {
+  html,
+  body {
+    @apply antialiased min-h-screen scroll-smooth;
+  }
+}
 
 body {
   background-color: #222831;
   color: #eeeeee;
-
-  box-sizing: border-box;
-
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
   line-height: 1.5;
+}
+
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
 }
